--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Portfolio app",
-  "name": "Portfolio app made with react as part of 'weekend projects' initiative",
+  "name": "Portfolio app",
   "homepage": "https://sstephensmcse.github.io/my-portfolio-app/",
   "icons": [
     {
